# ExplorationViaPainting

./: compile  configure  run
src/: CMakeLists.txt
src/Core/: CMakeLists.txt  G2AssimpScene.cpp  G2AssimpScene.h  G2AssimpSceneTextureGeneration.cpp  KGPhysicsManager.cpp  KGPhysicsManager.h  Unwrapping.hpp
src/Painting/: Painter.hpp
src/Renderer/: AutomataManagement.cl  CMakeLists.txt  Camera.hpp  Default.fs  DiffuseDefault.fs  DiffuseNormalDefault.fs  DiffuseNormalPainting.fs  GenerateAllHeaders.py  NormalDefault.fs  PointTextureEmitter.fs  PointTextureEmitter.gs  PointTextureEmitter.vs  Renderer.cpp  Renderer.hpp  SkinnedDefault.vs  Stage.cpp  Stage.hpp  StageLoadBundle.cpp  StaticDefault.vs  StaticPainting.vs  Utility.hpp  ViewFrustum.hpp
src/application/: CMakeLists.txt  main.cpp
src/assimp/: CMakeLists.txt
src/cmake/: CMakeLists.txt
src/glfw-3.1.1/: CMakeLists.txt
src/lua/: CMakeLists.txt
src/stb/: CMakeLists.txt  stb_image.cpp
